Reintroduce error by adding typeRoots

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
+    "typeRoots": ["./node_modules/@types", "./node_modules/@microsoft"],
     "types": ["vitest/globals"]
   },
   "include": ["src"],
